k8s/owner-pod.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: owner
spec:
  selector:
    matchLabels:
      app: owner
  template:
    metadata:
      labels:
        app: owner
    spec:
      containers:
        - name: owner
          # 여러분의 image 주소를 입력해주세요.
          image: krmp-d2hub-idock.9rum.cc/dev-test/repo_d853e3a640cc

---
apiVersion: v1
kind: Service
metadata:
  name: owner
spec:
  ports:
    - port: 3000
      targetPort: 3000
  selector:
    app: owner
