k8s/user-pod.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user
spec:
  selector:
    matchLabels:
      app: user
  template:
    metadata:
      labels:
        app: user
    spec:
      containers:
        - name: user
          # 여러분의 image 주소를 입력해주세요.
          image: krmp-d2hub-idock.9rum.cc/dev-test/repo_4d25686e620b

---
apiVersion: v1
kind: Service
metadata:
  name: user
spec:
  ports:
    - port: 3000
      targetPort: 3000
  selector:
    app: user
